Update EXILED package version and adjust related dependencies
The EXILED package version has been updated from 7.0.0-rc.3-1 to 8.6.0. Consequently, this required re-assigning file paths and adjusting certain dependencies as part of this update. Also, the NuGet tool version was adjusted from 6.5.0 to 6.8.0 as part of aligning with the package update.

--- a/SexUpdate/SexUpdate.csproj
+++ b/SexUpdate/SexUpdate.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="EXILED" Version="7.0.0-rc.3-1" />
+      <PackageReference Include="EXILED" Version="8.6.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -17,7 +17,7 @@
         <HintPath>..\..\..\SCP Secret Laboratory\Assembly\CommandSystem.Core.dll</HintPath>
       </Reference>
       <Reference Include="MapEditorReborn">
-        <HintPath>..\..\..\SCP Secret Laboratory\Assembly\MapEditorReborn.dll</HintPath>
+        <HintPath>..\..\..\AppData\Roaming\EXILED\Plugins\MapEditorReborn.dll</HintPath>
       </Reference>
       <Reference Include="Mirror">
         <HintPath>..\..\..\SCP Secret Laboratory\Assembly\Mirror.dll</HintPath>
